# voreanation

./: .gitignore  README.md  compose.yaml
backend/: .env  Cargo.toml  Dockerfile
backend/api/: Cargo.toml
backend/api/src/: lib.rs
backend/entity/src/: lib.rs
backend/migration/src/: lib.rs  m20241214_112002_users_table.rs  m20241214_200600_donations_table.rs  m20241218_213842_reviews_table.rs
backend/service/: Cargo.toml
frontend/: Dockerfile  package.json
