[package]
name = "service"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { version = "1.1.0", features = [
  "sqlx-postgres",
  "runtime-tokio-native-tls",
  "macros",
  "with-chrono",
  "with-uuid",
  "with-json",
] }
tokio = { version = "1.42.0", features = ["full"] }
entity = { path = "../entity" }
